@@ -1,3 +1,7 @@
+2011-02-18  Francois Felix Ingrand  <felix@ingrand.net>
+
+	* mp-register.c (read_int_from_socket): fix a 32/64 bits problem when the message passer and the client are running on 64 vs. 32 bits.
+
 2011-02-17  Felix Ingrand  <felix@cturtle>
 
 	* Modified the ope (OP Editor) so it does not start a graphical display when
